RESOLVED FIXED 227679
Fieldset elements can incorrectly get treated as opaque with async scrolling overflow areas enabled
https://bugs.webkit.org/show_bug.cgi?id=227679
Summary Fieldset elements can incorrectly get treated as opaque with async scrolling ...
Chris Lord
Reported 2021-07-05 02:23:38 PDT
imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/fieldset-overflow.html is failing because the 'actual' result image has a transparent area that should be opaque white (it otherwise matches the expected image). I assume this is happening because the fieldset area that overlaps this transparent area is being treated as an opaque rectangle, when its actual opaque area is determined by its children. This bug almost certainly isn't WPE-specific, but only WPE has async overflow scrolling enabled for all tests.
Attachments
Patch (3.45 KB, patch)
2021-07-06 08:30 PDT, Chris Lord
no flags
Patch (3.45 KB, patch)
2021-07-06 08:33 PDT, Chris Lord
no flags
Patch (3.65 KB, patch)
2021-07-06 08:35 PDT, Chris Lord
no flags
Chris Lord
Comment 1 2021-07-06 08:30:07 PDT
Chris Lord
Comment 2 2021-07-06 08:33:22 PDT
Chris Lord
Comment 3 2021-07-06 08:35:44 PDT
EWS
Comment 4 2021-07-07 01:12:32 PDT
Committed r279640 (239454@main): <https://commits.webkit.org/239454@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432937 [details].
Radar WebKit Bug Importer
Comment 5 2021-07-07 01:13:18 PDT
Note You need to log in before you can comment on or make changes to this bug.