[WPE] Fieldset elements can incorrectly get treated as opaque with async scrolling overflow areas enabled https://bugs.webkit.org/show_bug.cgi?id=227679

Reviewed by Simon Fraser.

Source/WebCore:

Don't treat fieldset elements as opaque as their background shape is
determined by its children and can be non-rectangular.

No new tests, covered by existing tests.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::backgroundIsKnownToBeOpaqueInRect const):

LayoutTests:

WPT fieldset-overflow test now passes with async overflow scrolling
enabled.

* platform/wpe/TestExpectations:


Canonical link: https://commits.webkit.org/239454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279640 268f45cc-cd09-0410-ab3c-d52691b4dbfc